static/style.css
/* @override http://10.0.1.28/nasaprofiles/style.css */

body {
	font-family: arial, sans-serif;
	font-size: 12px;
	border: 0;
	color: #404040;
	padding-bottom: 30px;
	margin: 0;
}	

.container {
    margin: 0 auto; 
    width:1000px;
}

#header {
    height:475px; 
    background: #e8ecdc;
	
}

#header_spacer {
    height: 50px;
}
#title_header {
    margin-top: -420px;    
    position: relative;
    width: 1000px;
}

#title {
    font-size: 125%;
    font-weight: bold; 
    float: left;
}


#title_description {
    float: left;
    width: 665px;
    margin: -5px 0px 0px 15px;
}

h2#title_description {
    font-size: 18px;
}


#participation_chart {
    padding-top: 70px;
    
}

#stat_box{
    margin-left: 50px;
    margin-top: 160px;
    height: 80px;
    font-size: 150%;
    width: 900px;
    position: relative;
}

.stat {
    width: 200px;
    height: 80px;
    margin: 0px 10px;
    float: left;    
}

.stat_description {
    font-size:16px;
    text-align:center;
}

.big_num {
    font-size: 400%;
    font-weight: bold;
    text-align:center;
}

h1 {
    font-family: century gothic;
	background: #404040;
	padding: 30px 0 10px 20px;
	color: #fff;
	width: 300px;
	margin: 0;
}

h2 {
	font-family: arial, sans-serif;
    font-weight: bold;
    font-size: 19px;
}

.h2 {
	font-family: arial, sans-serif;
    font-weight: bold;
    font-size: 20px;
}

.h2_web {
	font-family: arial, sans-serif;
    font-size: 16px;
    color:#1CACC4;
}

h3 {
	font-family: arial, sans-serif;
    font-style: italic;
    font-size: 14px;
}

h4 {
	font-family: arial, sans-serif;
    font-weight: bold;
    font-size: 16px;
}

h5 {
    font-family: century;
    font-size: 42px;
    font-style: bold;
    color: #404040;
    margin-top: 40px; 
    margin-bottom: 0px;   
}

h6 {
    font-family: century;
    font-size: 20px;
    font-style: italic;
    color: #404040;   
    margin-bottom: 70px; 
    margin-top: 0px;
}

ul#nav {
	list-style: none;
	background: #000;
	display: block;
	float: left;
	height: 35px;
	padding: 0;
	width: 100%;
	margin: 15px 0;
}

ul#nav li {
	float: left;
}

ul#nav li a {
	color: #C0CDCF;
	display: block;
	padding: 10px 30px;
	border-right: 1px solid #555;
	text-transform: uppercase;
	font-size: 14px;
	text-decoration: none;
}

ul#nav li a:hover {
	color: #fff;
}

span.fn {
	font-size: 36px;
	font-weight: bold;
	display: block;
}


#categories {
	height: 500px;
}

.section_title {
    margin-top: -30px; 
    font-weight: bold; 
}

.category {
    width: 200px;
    height: 300px;
    float: left;
    margin: 15px 50px 0px 0px;
}

.category_title {
    font-size: 200%;
    width: 200px;
    height: 30px;
    margin: 5px;
    font-weight: bold;
}

.category_idea_title {
    font-size: 150%;
    width: 200px;
    margin: 5px;
    min-height: 60px;
}

.category_author {
    font-weight: bold;
    width: 200px;
    margin: 5px;
    height: 15px;
}

.category_idea_text {
    width: 200px;
    height: 100px;
    margin: 5px 5px 10px 5px;  
}

.category_agency {
    width: 55px;
    height: 55px;
    margin: 5px 20px 0px 0px;
    float: left;
}

.category_num {
    font-size: 250%;
    width: 40px;
    text-align: center;
    height: 30px;
    margin: 5px 10px;
    float: left;
}

.category_num_title{
    width: 40px;
    text-align: center;
    margin: 5px 10px;
    float: left;
}


#endpoints {
    height: 325px;
    background: #e8ecdc;
}

#doing_great {
    width: 500px;
    float: left;        
}

#needs_love {
    width: 500px;
    float: left;
}

#agency {
    background-color: #DBE0CB;  
    padding-top: 1px;  
}

#agency_table {

}

#footer {
    color: #ccc;
    border-top: 1px dotted #999;
    padding-bottom: 5px;
    //height: 100px;
    background-color: #404040;   
}

#footer ul {
    padding: 0;
    margin: 0;
    list-style: none;
    font-size: 120%;
}

#footer li {
    float: left;
    margin-right: 10px;
}

#footer li a {
    color: #;
}

a {
    color: #996666;
    text-decoration: none;
}

a:hover {
    color: #cc9999;
    text-decoration: none;
}

a img {
    border: none;
}

.agency_table {
    width: 1000px;
}

td.table_num {
    text-align: center;   
}

.endpoints_img {
    float: left;
    width: 25px;
    height: 25px;
    padding-right: 10px;
}

.endpoints_content {
    font-size: 120%;
}

p.doing_great {
    font-weight: bold;
}

#footer_credits {
    text-align: right;    
}

.agency_links {
    margin-left: 10px;
    margin-right: 10px;
}

